complete users profile pages and edit menu section

--- a/account_app/templates/account_app/users_profile/change_password_page.html
+++ b/account_app/templates/account_app/users_profile/change_password_page.html
@@ -31,7 +31,7 @@
                                 <h4>تغییر کلمه عبور</h4>
                                 <hr>
                                 <br>
-                                <form action="{% url 'account_app:edit_user_profile_page' %}" method="post">
+                                <form action="{% url 'account_app:change_password_page' %}" method="post">
                                     {% csrf_token %}
                                     <!-- old_password -->
                                     <div class="row mb-3">
@@ -39,8 +39,7 @@
                                             <h6 class="mb-0">کلمه عبور فعلی</h6>
                                         </div>
                                         <div class="col-sm-9 text-secondary">
-                                            <input type="password" class="form-control" name="old_password"
-                                                   value="">
+                                            <input type="password" class="form-control" name="old_password">
                                         </div>
                                     </div>
                                     <!-- new_password1 -->
@@ -49,8 +48,7 @@
                                             <h6 class="mb-0">کلمه عبور جدید</h6>
                                         </div>
                                         <div class="col-sm-9 text-secondary">
-                                            <input type="text" class="form-control" name="new_password1"
-                                                   value="">
+                                            <input type="password" class="form-control" name="new_password1">
                                         </div>
                                     </div>
                                     <!-- new_password2 -->
@@ -59,8 +57,7 @@
                                             <h6 class="mb-0">تکرار کلمه عبور</h6>
                                         </div>
                                         <div class="col-sm-9 text-secondary">
-                                            <input type="text" class="form-control" name="new_password2"
-                                                   value="">
+                                            <input type="password" class="form-control" name="new_password2">
                                         </div>
                                     </div>
                                     <!-- submit -->
