--- a/account_app/templates/account_app/users_profile/user_panel_dashboard_page.html
+++ b/account_app/templates/account_app/users_profile/user_panel_dashboard_page.html
@@ -28,9 +28,19 @@
                     <div class="col-lg-8">
                         <div class="card">
                             <div class="card-body">
-                             <h4>داشبورد</h4>
+                                <h4>داشبورد</h4>
                                 <hr>
                                 <br>
+                                {% if messages %}
+                                    {% for message in messages %}
+                                        {% if message.tags == 'success' or message.tags == 'error' %}
+                                            <div class="alert {% if message.tags == 'success' %}alert-success{% else %}alert-danger{% endif %} mt-3"
+                                                 role="alert">
+                                                {{ message }}
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
 
                             </div>
                         </div>
