--- a/account_app/templates/account_app/users_profile/edit_profile_page.html
+++ b/account_app/templates/account_app/users_profile/edit_profile_page.html
@@ -95,6 +95,16 @@
                                         </div>
                                     </div>
                                 </form>
+                                {% if messages %}
+                                    {% for message in messages %}
+                                        {% if message.tags == 'success' or message.tags == 'error' %}
+                                            <div class="alert {% if message.tags == 'success' %}alert-success{% else %}alert-danger{% endif %} mt-3"
+                                                 role="alert">
+                                                {{ message }}
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
                             </div>
                         </div>
                     </div>
