complete contact_us and about_us pages

--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -61,7 +61,7 @@
                                 {% else %}
                                     <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
                                             class="la la-user mr-1"></i><a
-                                            href="/admin">
+                                            href="{% url 'account_app:user_panel_dashboard_page' %}">
                                         حساب کاربری</a></li>
                                     <li class="d-flex align-items-center pr-3 mr-3 border-left border-left-gray"><i
                                             class="la la-sign-out mr-1"></i><a
