--- a/templates/shared/header_references.html
+++ b/templates/shared/header_references.html
@@ -11,4 +11,5 @@
 <link rel="stylesheet" href="{% static 'css/fancybox.css' %}">
 <link rel="stylesheet" href="{% static 'css/tooltipster.bundle.css' %}">
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" href="{% static 'css/custom.css' %}">
   
