--- a/main_app/templates/main_app/contact_us_page.html
+++ b/main_app/templates/main_app/contact_us_page.html
@@ -3,6 +3,7 @@
     تماس با ما
 {% endblock %}
 {% block content %}
+    <!-- breadcrumb -->
     <section class="breadcrumb-area section-padding img-bg-2">
         <div class="overlay"></div>
         <div class="container">
@@ -22,17 +23,11 @@
         </div>
         <!-- end container -->
     </section>
-
+    <!-- contact-us -->
     <section class="contact-area section--padding position-relative">
-        <span class="ring-shape ring-shape-1"></span>
-        <span class="ring-shape ring-shape-2"></span>
-        <span class="ring-shape ring-shape-3"></span>
-        <span class="ring-shape ring-shape-4"></span>
-        <span class="ring-shape ring-shape-5"></span>
-        <span class="ring-shape ring-shape-6"></span>
-        <span class="ring-shape ring-shape-7"></span>
         <div class="container">
             <div class="row">
+                <!-- address -->
                 <div class="col-lg-4 responsive-column-half">
                     <div class="info-box">
                         <div class="info-overlay"></div>
@@ -52,11 +47,11 @@
                             </svg>
                         </div>
                         <h3 class="info__title">مکان ما</h3>
-                        <p class="info__text">660 بروکلین خیابان، 88 نیویورک، ایالات متحده آمریکا</p>
+                        <p class="info__text">{{ site_setting.address }}</p><br>
                     </div>
-                    <!-- end info-box -->
                 </div>
-                <!-- end col-lg-3 -->
+
+                <!-- email -->
                 <div class="col-lg-4 responsive-column-half">
                     <div class="info-box">
                         <div class="info-overlay"></div>
@@ -83,146 +78,148 @@
                                 </svg>
                         </div>
                         <h3 class="info__title">به ما ایمیل بزنید</h3>
-                        <p class="info__text">info123@example.com</p>
-                        <p class="info__text">info123@example.com</p>
+                        <p class="info__text">{{ site_setting.email }}</p><br><br>
+
                     </div>
-                    <!-- end info-box -->
                 </div>
-                <!-- end col-lg-3 -->
+
+                <!-- contact -->
                 <div class="col-lg-4 responsive-column-half">
                     <div class="info-box">
                         <div class="info-overlay"></div>
                         <div class="icon-element mx-auto shadow-sm">
-                            <svg class="svg-icon-color-3" width="40" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                                 x="0px" y="0px" viewBox="0 0 473.806 473.806" xml:space="preserve">
-                                    <g>
-                                        <g>
-                                            <path
-                                                    d="M374.456,293.506c-9.7-10.1-21.4-15.5-33.8-15.5c-12.3,0-24.1,5.3-34.2,15.4l-31.6,31.5c-2.6-1.4-5.2-2.7-7.7-4
-                                            c-3.6-1.8-7-3.5-9.9-5.3c-29.6-18.8-56.5-43.3-82.3-75c-12.5-15.8-20.9-29.1-27-42.6c8.2-7.5,15.8-15.3,23.2-22.8
-                                            c2.8-2.8,5.6-5.7,8.4-8.5c21-21,21-48.2,0-69.2l-27.3-27.3c-3.1-3.1-6.3-6.3-9.3-9.5c-6-6.2-12.3-12.6-18.8-18.6
-                                            c-9.7-9.6-21.3-14.7-33.5-14.7s-24,5.1-34,14.7c-0.1,0.1-0.1,0.1-0.2,0.2l-34,34.3c-12.8,12.8-20.1,28.4-21.7,46.5
-                                            c-2.4,29.2,6.2,56.4,12.8,74.2c16.2,43.7,40.4,84.2,76.5,127.6c43.8,52.3,96.5,93.6,156.7,122.7c23,10.9,53.7,23.8,88,26
-                                            c2.1,0.1,4.3,0.2,6.3,0.2c23.1,0,42.5-8.3,57.7-24.8c0.1-0.2,0.3-0.3,0.4-0.5c5.2-6.3,11.2-12,17.5-18.1c4.3-4.1,8.7-8.4,13-12.9
-                                            c9.9-10.3,15.1-22.3,15.1-34.6c0-12.4-5.3-24.3-15.4-34.3L374.456,293.506z M410.256,398.806
-                                            C410.156,398.806,410.156,398.906,410.256,398.806c-3.9,4.2-7.9,8-12.2,12.2c-6.5,6.2-13.1,12.7-19.3,20
-                                            c-10.1,10.8-22,15.9-37.6,15.9c-1.5,0-3.1,0-4.6-0.1c-29.7-1.9-57.3-13.5-78-23.4c-56.6-27.4-106.3-66.3-147.6-115.6
-                                            c-34.1-41.1-56.9-79.1-72-119.9c-9.3-24.9-12.7-44.3-11.2-62.6c1-11.7,5.5-21.4,13.8-29.7l34.1-34.1c4.9-4.6,10.1-7.1,15.2-7.1
-                                            c6.3,0,11.4,3.8,14.6,7c0.1,0.1,0.2,0.2,0.3,0.3c6.1,5.7,11.9,11.6,18,17.9c3.1,3.2,6.3,6.4,9.5,9.7l27.3,27.3
-                                            c10.6,10.6,10.6,20.4,0,31c-2.9,2.9-5.7,5.8-8.6,8.6c-8.4,8.6-16.4,16.6-25.1,24.4c-0.2,0.2-0.4,0.3-0.5,0.5
-                                            c-8.6,8.6-7,17-5.2,22.7c0.1,0.3,0.2,0.6,0.3,0.9c7.1,17.2,17.1,33.4,32.3,52.7l0.1,0.1c27.6,34,56.7,60.5,88.8,80.8
-                                            c4.1,2.6,8.3,4.7,12.3,6.7c3.6,1.8,7,3.5,9.9,5.3c0.4,0.2,0.8,0.5,1.2,0.7c3.4,1.7,6.6,2.5,9.9,2.5c8.3,0,13.5-5.2,15.2-6.9
-                                            l34.2-34.2c3.4-3.4,8.8-7.5,15.1-7.5c6.2,0,11.3,3.9,14.4,7.3c0.1,0.1,0.1,0.1,0.2,0.2l55.1,55.1
-                                            C420.456,377.706,420.456,388.206,410.256,398.806z"
-                                            ></path>
-                                            <path
-                                                    d="M256.056,112.706c26.2,4.4,50,16.8,69,35.8s31.3,42.8,35.8,69c1.1,6.6,6.8,11.2,13.3,11.2c0.8,0,1.5-0.1,2.3-0.2
-                                            c7.4-1.2,12.3-8.2,11.1-15.6c-5.4-31.7-20.4-60.6-43.3-83.5s-51.8-37.9-83.5-43.3c-7.4-1.2-14.3,3.7-15.6,11
-                                            S248.656,111.506,256.056,112.706z"
-                                            ></path>
-                                            <path
-                                                    d="M473.256,209.006c-8.9-52.2-33.5-99.7-71.3-137.5s-85.3-62.4-137.5-71.3c-7.3-1.3-14.2,3.7-15.5,11
-                                            c-1.2,7.4,3.7,14.3,11.1,15.6c46.6,7.9,89.1,30,122.9,63.7c33.8,33.8,55.8,76.3,63.7,122.9c1.1,6.6,6.8,11.2,13.3,11.2
-                                            c0.8,0,1.5-0.1,2.3-0.2C469.556,223.306,474.556,216.306,473.256,209.006z"
-                                            ></path>
-                                        </g>
-                                    </g>
-                                </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+                                 class="bi bi-clock svg-icon-color-3" viewBox="0 0 16 16">
+                                <path d="M8 3.5a.5.5 0 0 1 .5.5v4.25l3 1.8a.5.5 0 0 1-.5.9L8 9V4a.5.5 0 0 1 .5-.5z"/>
+                                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm0-1A7 7 0 1 1 8 1a7 7 0 0 1 0 14z"/>
+                            </svg>
                         </div>
-                        <h3 class="info__title">با ما تماس بگیرید</h3>
-                        <p class="info__text">7884 123 163 +</p>
-                        <p class="info__text">7884 123 163 +</p>
+                        <h3 class="info__title">زمان فعالیت</h3>
+                        <p class="info__text">{{ site_setting.working_hours }}</p>
                     </div>
-                    <!-- end info-box -->
                 </div>
-                <!-- end col-lg-3 -->
             </div>
-            <!-- end row -->
-            <div class="row align-items-center pt-30px">
-                <div class="col-lg-5">
-                    <div class="contact-content pb-5">
-                        <div class="section-heading">
-                            <h2 class="section__title pb-3">ما از اینکه ازت خبر داشته باشیم خوشحال میشویم</h2>
-                            <p class="section__desc">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-                                استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله</p>
-                        </div>
-                        <!-- end section-heading -->
-                        <ul class="social-icons social-icons-styled social--icons-styled pt-30px">
-                            <li>
-                                <a href="#"><i class="la la-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="la la-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="la la-instagram"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="la la-youtube"></i></a>
-                            </li>
-                        </ul>
+            <!-- text -->
+            <div class="col-lg-12">
+                <div class="contact-content pb-5">
+                    <!-- text -->
+                    <div class="section-heading">
+                        <h2 class="section__title pt-3">ارتباط با ما</h2>
+                        <p class="text-justify font-weight-bold">خوشحال می‌شویم با ما در ارتباط باشید!
+                            اگر پرسشی دارید، پیشنهاد یا انتقادی، لطفاً فرم را پر کنید.
+                            ما سعی می‌کنیم در سریع‌ترین زمان ممکن پاسخ دهیم.</p>
                     </div>
                 </div>
-                <!-- end col-lg-5 -->
-                <div class="col-lg-7">
+            </div>
+            <!-- contact form -->
+            <div class="row align-items-center">
+                <!-- form -->
+                <div class="col-lg-12">
                     <div class="card card-item">
                         <div class="card-body">
                             <form method="post"
                                   action="http://techydevs.com/demos/themes/html/aduca-demo/aduca/php/contact.php"
                                   class="contact-form">
+                                {% csrf_token %}
                                 <div class="alert alert-success contact-success-message" role="alert">
                                     متشکرم! پیام شما ارسال شد
                                 </div>
-                                <div class="input-box">
-                                    <label class="label-text">اسم شما</label>
-                                    <div class="form-group">
-                                        <input id="name" class="form-control form--control" type="text" name="name"
-                                               placeholder="اسم شما"/>
-                                        <span class="la la-user input-icon"></span>
+                                {% if request.user.is_authenticated %}
+                                    <!-- subject -->
+                                    <div class="input-box">
+                                        <label class="label-text">موضوع</label>
+                                        <div class="form-group">
+                                            <input id="subject" class="form-control form--control" type="text" name="subject"
+                                                   placeholder="موضوع"/>
+                                            <span class="la la-envelope input-icon"></span>
+                                        </div>
                                     </div>
-                                </div>
-                                <!-- end input-box -->
-                                <div class="input-box">
-                                    <label class="label-text">آدرس ایمیل</label>
-                                    <div class="form-group">
-                                        <input id="email" class="form-control form--control" type="email" name="email"
-                                               placeholder="آدرس ایمیل"/>
-                                        <span class="la la-envelope input-icon"></span>
-                                    </div>
-                                </div>
-                                <!-- end input-box -->
-                                <div class="input-box">
-                                    <label class="label-text">پیام</label>
-                                    <div class="form-group">
+                                    <!-- message -->
+                                    <div class="input-box">
+                                        <label class="label-text">پیام</label>
+                                        <div class="form-group">
                                         <textarea id="message" class="form-control form--control pl-4" name="message"
                                                   rows="5" placeholder="پیام"></textarea>
+                                        </div>
                                     </div>
-                                </div>
-                                <!-- end input-box -->
-                                <div class="btn-box">
-                                    <button id="send-message-btn" class="btn theme-btn" type="submit">ارسال پیام
-                                    </button>
-                                </div>
-                                <!-- end btn-box -->
+
+                                    <!-- submit -->
+                                    <div class="btn-box">
+                                        <button id="send-message-btn" class="btn theme-btn" type="submit">ارسال پیام
+                                        </button>
+                                    </div>
+                                {% else %}
+                                    <!-- name -->
+                                    <div class="input-box">
+                                        <label class="label-text">اسم شما</label>
+                                        <div class="form-group">
+                                            <input id="name" class="form-control form--control" type="text" name="full_name"
+                                                   placeholder="اسم شما"/>
+                                            <span class="la la-user input-icon"></span>
+                                        </div>
+                                    </div>
+
+                                    <!-- email -->
+                                    <div class="input-box">
+                                        <label class="label-text">آدرس ایمیل</label>
+                                        <div class="form-group">
+                                            <input id="email" class="form-control form--control" type="email" name="email"
+                                                   placeholder="آدرس ایمیل"/>
+                                            <span class="la la-envelope input-icon"></span>
+                                        </div>
+                                    </div>
+
+                                    <!-- subject -->
+                                    <div class="input-box">
+                                        <label class="label-text">موضوع</label>
+                                        <div class="form-group">
+                                            <input id="subject" class="form-control form--control" type="text" name="subject"
+                                                   placeholder="موضوع"/>
+                                            <span class="la la-envelope input-icon"></span>
+                                        </div>
+                                    </div>
+
+                                    <!-- message -->
+                                    <div class="input-box">
+                                        <label class="label-text">پیام</label>
+                                        <div class="form-group">
+                                        <textarea id="message" class="form-control form--control pl-4" name="message"
+                                                  rows="5" placeholder="پیام"></textarea>
+                                        </div>
+                                    </div>
+
+                                    <!-- submit -->
+                                    <div class="btn-box">
+                                        <button id="send-message-btn" class="btn theme-btn" type="submit">ارسال پیام
+                                        </button>
+                                    </div>
+                                {% endif %}
                             </form>
                         </div>
-                        <!-- end card-body -->
                     </div>
-                    <!-- end card -->
                 </div>
-                <!-- end col-lg-7 -->
             </div>
-            <!-- end row -->
+
+            <!-- map -->
             <div class="row pt-30px">
                 <div class="col-lg-12">
                     <div class="map-container">
-                        <div id="map"></div>
+                        <div id="map">{{ site_setting.map_embed|safe }}</div>
                     </div>
-                    <!-- end map-container -->
                 </div>
-                <!-- end col-lg-12 -->
             </div>
-            <!-- end row -->
+            <!-- balad & neshan -->
+            <div class="d-flex gap-3">
+                <!-- بلد -->
+                <a href="{{ site_setting.balad_link }}" target="_blank" class="social-icon">
+                    <img src="/static/images/balad.png" alt="Balad" width="40" height="40">
+                </a>
+
+                <!-- نشان -->
+                <a href="{{ site_setting.neshan_link }}" target="_blank" class="social-icon">
+                    <img src="/static/images/neshan.png" alt="Neshan" width="40" height="40">
+                </a>
+            </div>
         </div>
     </section>
 {% endblock %}
